--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "countup": "^1.8.2",
     "element-ui": "^2.13.2",
+    "iview": "^3.5.4",
+    "less-loader": "^6.2.0",
+    "view-design": "^4.3.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -20,6 +24,7 @@
     "@vue/cli-plugin-vuex": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
     "babel-plugin-component": "^1.1.1",
+    "babel-plugin-import": "^1.13.0",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
