--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "countup": "^1.8.2",
+    "js-cookie": "^2.2.0",
     "element-ui": "^2.13.2",
     "iview": "^3.5.4",
     "less-loader": "^6.2.0",
