--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "countup": "^1.8.2",
-    "js-cookie": "^2.2.0",
     "element-ui": "^2.13.2",
     "iview": "^3.5.4",
-    "less-loader": "^6.2.0",
+    "js-cookie": "^2.2.0",
+    "node-sass": "^4.14.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -25,6 +25,7 @@
     "@vue/cli-service": "~4.4.0",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.13.0",
+    "sass-loader": "^9.0.2",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
